--- a/themes/stepmania/src/_form.scss
+++ b/themes/stepmania/src/_form.scss
@@ -1,4 +1,5 @@
 form {
+	padding-top: $spacing;
 	.field {
 		margin-bottom: $spacing;
 		.left {
